--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "format:biome": "biome check . --apply",
+    "lint": "astro sync && run-s --continue-on-error lint:*",
     "lint:biome": "biome lint .",
     "lint:types": "tsc -b",
     "lint:astro": "astro check"
@@ -23,7 +24,9 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@astrojs/site-kit": "github:withastro/site-kit",
     "@biomejs/biome": "^1.4.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3"
   }
