--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "prettier": "@astrojs/site-kit/prettier",
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@fontsource/dejavu-mono": "^5.0.7",
     "astro": "^4.0.8",
     "typescript": "^5.3.3"
   },
