--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/check": "^0.3.4",
     "@fontsource/dejavu-mono": "^5.0.7",
     "astro": "^4.0.8",
+    "astro-icon": "^1.0.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
